# CLMake

./: CLMakeCache.txt  CLMakeConfig.txt  CLMakeLog.txt  CLMtarget_0.txt  CMakeLists.txt  README.md  template.CLM
src/: head.h  main.cpp
src/ConsoleManager/: ConsoleManager.cpp  HeadCm.h
src/builder/: buildHead.h
src/builder/StreamEI/: SEI.cpp  StreamEI.h
src/builder/SystemBuild/: build.cpp  builder.cpp  runScr.cpp
src/builder/SystemBuild/func/: add_.cpp  builder.cpp  call_Command.cpp  create_target.cpp  debug.cpp  function.h  link_Library.cpp  project.cpp  set.cpp  templates.cpp  work_pr.cpp
src/builder/class/: enum_exeCL.cpp  error.cpp  parser.cpp  wf.cpp
src/builder/class/head/: err.h  project.h  sys.h  target_ex.h  var.h  wf.h
src/builder/setup/: assist.h  log.h
src/builder/setup/assistant/: assistant.cpp  debug.cpp  error_hand.cpp  log.cpp
